--- a/index.html
+++ b/index.html
@@ -109,15 +109,15 @@
 
     <script>
         let images = [
-        "IMG-20230903-WA0012.jpg", "IMG-20230903-WA0010.jpg", "IMG-20230903-WA0008.jpg",
+       "IMG-20230903-WA0012.jpg", "IMG-20230903-WA0010.jpg", "IMG-20230903-WA0008.jpg",
             "IMG-20230903-WA0005.jpg", "g (5).jpg", "g (7).jpg", "22.jpg",
             "23.jpg", "g(11).jpg", "33.jpg", "1687962730299.jpg",
-            "27.jpg", "36.jpg", "IMG_20220605_110529.jpg", "IMG_20220107_150153.jpg",
-            "Screenshot_2022_0807_210216.jpg", "IMG-20250215-WA0036.jpg",
-            "IMG_20220121_163736.jpg", "IMG_20220608_093230.jpg", "1687962526640.jpg",
+            "27.jpg", "36.jpg", 
+            "IMG-20250215-WA0036.jpg",
+            "IMG_20220121_163736.jpg", "IMG_20220608_093230.jpg",
             "Snapchat-633533207.jpg", "IMG_20220608_111857.jpg", "IMG_20220608_093149.jpg",
             "IMG_20220608_083800.jpg", "IMG_20220607_075448.jpg", "IMG_20220604_084706.jpg",
-            "IMG_20220605_110052.jpg", "IMG_20220604_190318.jpg", 
+            "IMG_20220605_110052.jpg", "IMG_20220604_190318.jpg" 
         ];
 
         let gallery = document.getElementById("gallery");
